--- a/miniapp/pages/userCenter/editProfile/editProfile.wxml
+++ b/miniapp/pages/userCenter/editProfile/editProfile.wxml
@@ -1,3 +1,23 @@
+<t-navbar t-class-placeholder="t-navbar-placeholder" t-class-content="t-navbar-content" title="标题文字">
+  <view slot="capsule" class="custom-capsule">
+  <t-icon
+      size="20"
+      bind:tap="onBack"
+      aria-role="button"
+      aria-label="返回"
+      name="chevron-left"
+      class="custom-capsule__icon back"
+    />
+    <t-icon
+      size="20"
+      bind:tap="onGoHome"
+      aria-role="button"
+      aria-label="首页"
+      name="home"
+      class="custom-capsule__icon home"
+    />
+  </view>
+</t-navbar>
 <t-cell-group class="on" theme="card">
   <t-cell title="头像" leftIcon="" rightIcon="town"  hover arrow />
   <t-cell title="昵称" leftIcon="" hover arrow />
