--- a/miniapp/pages/userCenter/discountTicket/discountTicket.wxml
+++ b/miniapp/pages/userCenter/discountTicket/discountTicket.wxml
@@ -14,11 +14,12 @@
   <block wx:for="{{coupons}}" wx:key="id">
   <t-cell-group theme="card" class="card" style="margin-bottom: 40px;">
     <t-cell class="card">
-      <view class="card-title">
-        <view class="title">{{item.type}}</view>
-        <view class="sub-title">折扣金额：减{{item.discountAmount}}元</view>
-        <view class="sub-title">使用条件：满{{item.conditionAmount}}</view>
-        <view class="sub-title">有效期至：{{item.expiryDate}}</view>
+      <view slot="title">
+        <view class="title">{{item.couponsName}}</view>
+        <view class="sub-title">折扣金额：减{{item.reductionPrice}}元</view>
+        <view class="sub-title">使用条件：满{{item.reductionFull}}</view>
+        <view class="sub-title">生效时间：{{item.createTime}}</view>
+        <view class="sub-title">有效期至：{{item.updateTime}}</view>
       </view>
     </t-cell>
   </t-cell-group>
