--- a/miniapp/pages/QRcode/QRcode.wxml
+++ b/miniapp/pages/QRcode/QRcode.wxml
@@ -1,3 +1,9 @@
+
+  <!-- 显示本地图片 -->
+ 
+  <view class="container">
+    <image class="local-image" src="../img/temp/good.png" mode="aspectFill"></image>
+</view>
 <view class="product-card">
   <image class="product-image" src="{{product.imageUrl}}" mode="aspectFill"></image>
   <view class="product-info">
@@ -30,4 +36,8 @@
       <text class="value">{{product.manager}}</text>
     </view>
   </view>
+  <view class="container">
+    <image class="local-image2" src="../img/temp/introduction.png" mode="aspectFill"></image>
 </view>
+</view>
+
