--- a/miniapp/pages/QRcode/QRcode.wxml
+++ b/miniapp/pages/QRcode/QRcode.wxml
@@ -1,6 +1,35 @@
+<!-- <t-navbar t-class-placeholder="t-navbar-placeholder" t-class-content="t-navbar-content" title="5555555555555555555555555555">
+  <view slot="capsule" class="custom-capsule">
+    <t-icon
+      size="20"
+      bind:tap="onBack"
+      aria-role="button"
+      aria-label="返回"
+      name="chevron-left"
+      class="custom-capsule__icon back"
+    />
+    <t-icon
+      size="20"
+      bind:tap="onGoHome"
+      aria-role="button"
+      aria-label="首页"
+      name="home"
+      class="custom-capsule__icon home"
+    />
+  </view>
+</t-navbar> -->
+<view class="container">
+  <!-- 左上角返回按钮 -->
+  <navigator class="back-button" open-type="navigateBack">
+    返回
+  </navigator>
+  
+  <!-- 其他页面内容 -->
+  <view class="content">
+    <!-- 页面内容 -->
+  </view>
+</view>
 
-  <!-- 显示本地图片 -->
- 
   <view class="container">
     <image class="local-image" src="../img/temp/good.png" mode="aspectFill"></image>
 </view>
