--- a/miniapp/pages/menu/menu.wxml
+++ b/miniapp/pages/menu/menu.wxml
@@ -60,17 +60,42 @@
     >
       <view class="title">{{categories[sideBarIndex].label}}</view>
 <!-- 右侧菜品显示 -->
-      <t-cell-group>
+<!-- ￥{{cargo.commodityPrice}} -->
+      <!-- <t-cell-group>
         <block  wx:for="{{commodityNames}}" wx:key="index" wx:for-item="cargo">
-          <t-cell  title="{{cargo.commodityName}}" >
-            <!-- <view slot="footer" style="text-align: right; color: #888;">
-              ￥{{cargo.commodityPrice}}
-            </view> -->
-            <t-image shape="round" src="{{cargo.image}}" slot="image" lazy 
+          <t-cell  title="{{cargo.commodityName}} " >
+            <view class="custom-title">  
+                {{cargo.commodityName}}  
+            </view>  
+            <view class="custom-sub-title">  
+              ￥{{cargo.commodityPrice}} 
+            </view> 
+            <t-image shape="round" src="{{cargo.profileImage}}" slot="image" lazy 
             style="width: 96rpx; height: 96rpx; border: 2rpx solid #e7e7e7;" />
           </t-cell>
         </block>
-      </t-cell-group>
+      </t-cell-group> -->
+      <view>
+        <block wx:for="{{commodityNames}}" wx:key="index" wx:for-item="cargo">
+          <view class="view-right" >
+              <view style="margin-right: 20rpx;">
+                <image src="{{cargo.profileImage}}" style="border-radius: 10px; width: 96rpx; height: 96rpx; border: 2rpx solid #e7e7e7;" lazy />
+              </view>
+              <view style="flex-grow: 1; ">
+                <view style="font-size: 32rpx; color: #333;">
+                  {{cargo.commodityName}}
+                </view>
+                <view style="font-size: 28rpx; color: #999; margin-top: 8rpx;">
+                  ￥{{cargo.commodityPrice}}
+                </view>
+              </view>
+              <view style="display: flex; align-items: center; justify-content: flex-end;">
+                <image src="../img/icon/ic_img_add.png" style="width: 40rpx; height: 40rpx;" />
+              </view>
+          </view>
+        </block>
+      </view>
+
     </scroll-view>
 <!-- 右侧商品栏 -->
     <!-- <view class="product-container">  
