--- a/miniapp/pages/menu/menu.wxml
+++ b/miniapp/pages/menu/menu.wxml
@@ -1,114 +1,79 @@
-<!--pages/menu/menu.wxml-->
 <view>
-<!-- 导航栏 -->
-<t-navbar t-class-placeholder="t-navbar-placeholder" t-class-content="t-navbar-content" title="菜单">
-  <view slot="capsule" class="custom-capsule">
-    <t-icon
-      size="20"
-      bind:tap="onBack"
-      aria-role="button"
-      aria-label="返回"
-      name="chevron-left"
-      class="custom-capsule__icon back"
-    />
-    <t-icon
-      size="20"
-      bind:tap="onGoHome"
-      aria-role="button"
-      aria-label="首页"
-      name="home"
-      class="custom-capsule__icon home"
-    />
-  </view>
-</t-navbar>
+  <!-- 导航栏 -->
+  <t-navbar t-class-placeholder="t-navbar-placeholder" t-class-content="t-navbar-content" title="菜单">
+    <view slot="capsule" class="custom-capsule">
+      <t-icon size="20" bind:tap="onBack" aria-role="button" aria-label="返回" name="chevron-left" class="custom-capsule__icon back" />
+      <t-icon size="20" bind:tap="onGoHome" aria-role="button" aria-label="首页" name="home" class="custom-capsule__icon home" />
+    </view>
+  </t-navbar>
 
-<!-- 搜索栏 -->
+  <!-- 搜索栏 -->
   <view class="search-bar">
     <image class="icon-search" src="../img/icon/search.png"></image>
-    <input class="search-input" type="text" placeholder="输入搜索内容"/>
+    <input class="search-input" type="text" placeholder="输入搜索内容" />
   </view>
 
-<view class="side-bar-wrapper" style="height: calc(100vh - {{navbarHeight}}px)">
-<!-- 左侧种类栏 -->
-<!-- bind:tap="getAllCommodity" -->
-  <t-side-bar  value="{{sideBarIndex}}" bind:change="onSideBarChange">
-  <!--  wx:for="{{categories}}"
-      wx:key="label"
-      value="{{item.value || index}}"
-      label="{{item.label}}"
-      disabled="{{item.disabled}}"
-      badge-props="{{item.badgeProps}}" -->
-    <t-side-bar-item
-    wx:for="{{categories}}"
-    wx:key="index"
-    value="{{index}}"
-    label="{{item.label}}"
-    />
-  </t-side-bar>
-  <view class="content" style="transform: translateY(-{{sideBarIndex * 100}}%)">
-    <!-- wx:for="{{categories}}"
-      wx:key="label"
-      class="section" -->
-    <scroll-view
-    class="section"
-    wx:for="{{categories}}"
-    
-      scroll-y
-      scroll-top="{{scrollTop}}"
-      scroll-with-animation
-      show-scrollbar="{{false}}"
-    >
-      <view class="title">{{categories[sideBarIndex].label}}</view>
-<!-- 右侧菜品显示 -->
-<!-- ￥{{cargo.commodityPrice}} -->
-      <!-- <t-cell-group>
-        <block  wx:for="{{commodityNames}}" wx:key="index" wx:for-item="cargo">
-          <t-cell  title="{{cargo.commodityName}} " >
-            <view class="custom-title">  
-                {{cargo.commodityName}}  
-            </view>  
-            <view class="custom-sub-title">  
-              ￥{{cargo.commodityPrice}} 
-            </view> 
-            <t-image shape="round" src="{{cargo.profileImage}}" slot="image" lazy 
-            style="width: 96rpx; height: 96rpx; border: 2rpx solid #e7e7e7;" />
-          </t-cell>
-        </block>
-      </t-cell-group> -->
-      <view>
-        <block wx:for="{{commodityNames}}" wx:key="index" wx:for-item="cargo">
-          <view class="view-right" >
+  <view class="side-bar-wrapper" style="height: calc(100vh - {{navbarHeight}}px)">
+    <t-side-bar value="{{sideBarIndex}}" bind:change="onSideBarChange">
+      <t-side-bar-item wx:for="{{categories}}" wx:key="index" value="{{index}}" label="{{item.label}}" />
+    </t-side-bar>
+    <view class="content" style="transform: translateY(-{{sideBarIndex * 100}}%)">
+
+      <scroll-view class="section" wx:for="{{categories}}" scroll-y scroll-top="{{scrollTop}}" scroll-with-animation show-scrollbar="{{false}}">
+        <view>
+          <block wx:for="{{commodityNames}}" wx:key="index" wx:for-item="commodity">
+            <view class="view-right" data-commodityId="commodityId">
               <view style="margin-right: 20rpx;">
-                <image src="{{cargo.profileImage}}" style="border-radius: 10px; width: 96rpx; height: 96rpx; border: 2rpx solid #e7e7e7;" lazy />
+                <image src="{{commodity.profileImage}}" style="border-radius: 10px; width: 96rpx; height: 96rpx; border: 2rpx solid #e7e7e7;" lazy />
               </view>
               <view style="flex-grow: 1; ">
                 <view style="font-size: 32rpx; color: #333;">
-                  {{cargo.commodityName}}
+                  {{commodity.commodityName}}
                 </view>
                 <view style="font-size: 28rpx; color: #999; margin-top: 8rpx;">
-                  ￥{{cargo.commodityPrice}}
+                  ￥{{commodity.commodityPrice}}
                 </view>
               </view>
-              <view style="display: flex; align-items: center; justify-content: flex-end;">
-                <image src="../img/icon/ic_img_add.png" style="width: 40rpx; height: 40rpx;" />
+
+              <view class="item-stepper">
+                <t-stepper class="stepper-q" defaultValue="0" theme="filled" disable-input="true" size="small" bind:change="onStepperChange" data-commodity="{{commodity}}" />
               </view>
-          </view>
-        </block>
-      </view>
+            </view>
+          </block>
+        </view>
 
-    </scroll-view>
-<!-- 右侧商品栏 -->
-    <!-- <view class="product-container">  
-      <image src="../img/temp/market-1.png" class="product-image"></image>  
-      <view class="product-info">  
-        <text class="product-name">野生莲藕</text>  
-        <text class="product-price">¥888</text> 
-        <image src="../img/icon/ic_img_add.png" class="product-add"></image>
-      </view>
-    </view> -->
-    
+      </scroll-view>
+
+    </view>
   </view>
-</view>
-  <image src="../img/icon/ic-img-market.png" class="cart-icon"></image>
-</view>
 
+
+  <t-popup visible="{{visible}}" bind:visible-change="onVisibleChange" placement="bottom">
+  <view class="cart-block">
+    <block wx:for="{{shoppingCart}}" wx:key="index" wx:for-item="cartCommodity">
+      <view class="classItem">
+        <image class="cart-item-image" src="{{cartCommodity.profileImage}}" />
+        <view class="cart-item-details">
+          <view class="cart-item-name">{{cartCommodity.commodityName}}</view>
+          <view class="cart-item-price">￥{{cartCommodity.commodityPrice}} X {{cartCommodity.quantity}}</view>
+        </view>
+      </view>
+    </block>
+  </view>
+  <t-divider />
+  <view class="summrization">
+    小计:￥{{totalPrice}}
+  </view>
+  <view class="cartOp">
+    <view class="clear-cart">
+      <t-button  size="large" bind:tap="clearCart">清空购物车</t-button>
+    </view>
+    <view class="pay-cart">
+      <t-button theme="primary" size="large" bind:tap="checkOut">结账</t-button>
+    </view>
+  </view>
+</t-popup>
+
+
+  <image src="../img/icon/ic-img-market.png" class="cart-icon" bind:tap="handlePopup" data-cart="shoppingCart"></image>
+</view>
